--- a/Week 3/Day1 Task 1 Ejike.ipynb
+++ b/Week 3/Day1 Task 1 Ejike.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6837370a",
+   "id": "d73bbf23",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c77b0c2",
+   "id": "8024c88c",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e7a6a984",
+   "id": "10e9108f",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5448062c",
+   "id": "4fb242d0",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "be845a02",
+   "id": "b6e8112b",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f760c98d",
+   "id": "de2f56d8",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7c3d8d67",
+   "id": "0fea5348",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fb4d5470",
+   "id": "364d49a0",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "dc2cc7a0",
+   "id": "62ebece6",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0f08fd49",
+   "id": "26c44fb7",
    "metadata": {},
    "outputs": [
     {
@@ -300,10 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59935e79",
+   "execution_count": 38,
+   "id": "0a847005",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fruit at index 0 is Mango of length 5\n",
+      "The fruit at index 1 is Orange of length 6\n",
+      "The fruit at index 2 is Banana of length 6\n",
+      "The fruit at index 3 is Cashew of length 6\n",
+      "The fruit at index 4 is Pineapple of length 9\n",
+      "The fruit at index 5 is Apple of length 5\n"
+     ]
+    }
+   ],
    "source": [
     "# To loop over a list and print out each item and their length using the while loop\n",
     "Fruits = ['Mango', 'Orange', 'Banana', 'Cashew', 'Pineapple', 'Apple']\n",
@@ -313,6 +326,129 @@
     "    print('The fruit at index', index, 'is', Fruits[index], 'of length', len(Fruits[index]))\n",
     "    index = index + 1 # mind you, this marginal increament by 1 here is what allows us to wriggle out from the loop at the max index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "54dbc5c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_10044/468872448.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\HP\\AppData\\Local\\Temp/ipykernel_10044/468872448.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    for i in Number:\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "Number = int(range(20)\n",
+    "for i in Number:\n",
+    "    cube_i = i*i\n",
+    "    print('The cube of', i, 'is', cube_i)\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0f1f91c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n",
+      "1000\n",
+      "1331\n",
+      "1728\n",
+      "2197\n",
+      "2744\n",
+      "3375\n",
+      "4096\n",
+      "4913\n",
+      "5832\n",
+      "6859\n",
+      "8000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(1, 21):\n",
+    "    print(i**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "83962e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_10044/521697943.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\HP\\AppData\\Local\\Temp/ipykernel_10044/521697943.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Num = input(range(1,20)):\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    " Num = input(range(1,20)):\n",
+    "    for i in Num\n",
+    "    print(i*2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9ade89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(1, 20)2\n"
+     ]
+    }
+   ],
+   "source": [
+    "Num = input(range(1,20))\n",
+    "for i in Num:\n",
+    "    print(int(i*i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18831afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Num = input(range(1,20))\n",
+    "for i = Num:\n",
+    "    print(i*2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d355119f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
